// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiKeyPadMenuItem checkable renders as checkbox 1`] = `
<label
  class="euiKeyPadMenuItem emotion-euiKeyPadMenuItem-enabled"
  for="generated-id"
>
  <span
    class="euiKeyPadMenuItem__inner emotion-euiKeyPadMenuItem__inner"
  >
    <div
      class="euiCheckbox euiKeyPadMenuItem__checkableInput emotion-euiCheckbox-euiKeyPadMenuItem__checkableInput-showCheckableInputOnInteraction"
    >
      <div
        class="euiCheckbox__square emotion-euiCheckbox__square-unselected"
      >
        <span
          class="emotion-euiCheckbox__icon-check"
          data-euiicon-type="empty"
        />
        <input
          class="euiCheckbox__input emotion-euiCheckbox__input"
          id="generated-id"
          type="checkbox"
        />
      </div>
    </div>
    <span
      class="euiKeyPadMenuItem__icon emotion-euiKeyPadMenuItem__icon"
    >
      Icon
    </span>
    <span
      class="euiKeyPadMenuItem__label emotion-euiKeyPadMenuItem__label"
    >
      Label
    </span>
  </span>
</label>
`;

exports[`EuiKeyPadMenuItem checkable renders as radio 1`] = `
<label
  class="euiKeyPadMenuItem emotion-euiKeyPadMenuItem-enabled"
  for="generated-id"
>
  <span
    class="euiKeyPadMenuItem__inner emotion-euiKeyPadMenuItem__inner"
  >
    <div
      class="euiRadio euiKeyPadMenuItem__checkableInput emotion-euiRadio-euiKeyPadMenuItem__checkableInput-showCheckableInputOnInteraction"
    >
      <div
        class="euiRadio__circle emotion-euiRadio__circle-unselected"
      >
        <span
          class="emotion-euiRadio__icon"
          data-euiicon-type="empty"
        />
        <input
          class="euiRadio__input emotion-euiRadio__input"
          id="generated-id"
          name="single"
          type="radio"
          value=""
        />
      </div>
    </div>
    <span
      class="euiKeyPadMenuItem__icon emotion-euiKeyPadMenuItem__icon"
    >
      Icon
    </span>
    <span
      class="euiKeyPadMenuItem__label emotion-euiKeyPadMenuItem__label"
    >
      Label
    </span>
  </span>
</label>
`;

exports[`EuiKeyPadMenuItem is rendered 1`] = `
<button
  aria-label="aria-label"
  class="euiKeyPadMenuItem testClass1 testClass2 emotion-euiKeyPadMenuItem-enabled-euiTestCss"
  data-test-subj="test subject string"
  type="button"
>
  <span
    class="euiKeyPadMenuItem__inner emotion-euiKeyPadMenuItem__inner"
  >
    <span
      class="euiKeyPadMenuItem__icon emotion-euiKeyPadMenuItem__icon"
    >
      Icon
    </span>
    <span
      class="euiKeyPadMenuItem__label emotion-euiKeyPadMenuItem__label"
    >
      Label
    </span>
  </span>
</button>
`;

exports[`EuiKeyPadMenuItem props betaBadge renders 1`] = `
<span
  class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
  id="generated-id-wrapper"
>
  <button
    class="euiKeyPadMenuItem emotion-euiKeyPadMenuItem-enabled"
    type="button"
  >
    <span
      class="euiKeyPadMenuItem__inner emotion-euiKeyPadMenuItem__inner"
    >
      <span>
        <span
          aria-hidden="true"
          class="euiBetaBadge euiKeyPadMenuItem__betaBadge emotion-euiBetaBadge-subdued-s-baseline-euiKeyPadMenuItem__betaBadge"
          title="B"
        >
          B
        </span>
      </span>
      <span
        class="euiKeyPadMenuItem__icon emotion-euiKeyPadMenuItem__icon"
      >
        Icon
      </span>
      <span
        class="euiKeyPadMenuItem__label emotion-euiKeyPadMenuItem__label"
      >
        Label
      </span>
    </span>
  </button>
</span>
`;

exports[`EuiKeyPadMenuItem props betaBadge renders extra betaBadgeTooltipProps 1`] = `
<span
  class="euiToolTipAnchor customTooltipClass emotion-euiToolTipAnchor-inlineBlock"
  id="generated-id-wrapper"
>
  <button
    class="euiKeyPadMenuItem emotion-euiKeyPadMenuItem-enabled"
    type="button"
  >
    <span
      class="euiKeyPadMenuItem__inner emotion-euiKeyPadMenuItem__inner"
    >
      <span>
        <span
          aria-hidden="true"
          class="euiBetaBadge euiKeyPadMenuItem__betaBadge emotion-euiBetaBadge-subdued-s-baseline-euiKeyPadMenuItem__betaBadge"
          title="B"
        >
          B
        </span>
      </span>
      <span
        class="euiKeyPadMenuItem__icon emotion-euiKeyPadMenuItem__icon"
      >
        Icon
      </span>
      <span
        class="euiKeyPadMenuItem__label emotion-euiKeyPadMenuItem__label"
      >
        Label
      </span>
    </span>
  </button>
</span>
`;

exports[`EuiKeyPadMenuItem props betaBadge renders with betaBadgeIconType 1`] = `
<span
  class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
  id="generated-id-wrapper"
>
  <button
    class="euiKeyPadMenuItem emotion-euiKeyPadMenuItem-enabled"
    type="button"
  >
    <span
      class="euiKeyPadMenuItem__inner emotion-euiKeyPadMenuItem__inner"
    >
      <span>
        <span
          aria-hidden="true"
          class="euiBetaBadge euiKeyPadMenuItem__betaBadge emotion-euiBetaBadge-subdued-s-baseline-euiKeyPadMenuItem__betaBadge"
          title="B"
        >
          <span
            aria-hidden="true"
            class="euiBetaBadge__icon emotion-euiBetaBadge__icon"
            color="inherit"
            data-euiicon-type="bolt"
          />
        </span>
      </span>
      <span
        class="euiKeyPadMenuItem__icon emotion-euiKeyPadMenuItem__icon"
      >
        Icon
      </span>
      <span
        class="euiKeyPadMenuItem__label emotion-euiKeyPadMenuItem__label"
      >
        Label
      </span>
    </span>
  </button>
</span>
`;

exports[`EuiKeyPadMenuItem props betaBadge renders with betaBadgeTooltipContent 1`] = `
<span
  class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
  id="generated-id-wrapper"
>
  <button
    class="euiKeyPadMenuItem emotion-euiKeyPadMenuItem-enabled"
    type="button"
  >
    <span
      class="euiKeyPadMenuItem__inner emotion-euiKeyPadMenuItem__inner"
    >
      <span>
        <span
          aria-hidden="true"
          class="euiBetaBadge euiKeyPadMenuItem__betaBadge emotion-euiBetaBadge-subdued-s-baseline-euiKeyPadMenuItem__betaBadge"
          title="B"
        >
          B
        </span>
      </span>
      <span
        class="euiKeyPadMenuItem__icon emotion-euiKeyPadMenuItem__icon"
      >
        Icon
      </span>
      <span
        class="euiKeyPadMenuItem__label emotion-euiKeyPadMenuItem__label"
      >
        Label
      </span>
    </span>
  </button>
</span>
`;

exports[`EuiKeyPadMenuItem props isDisabled renders with href 1`] = `
<button
  class="euiKeyPadMenuItem emotion-euiKeyPadMenuItem-disabled"
  disabled=""
  type="button"
>
  <span
    class="euiKeyPadMenuItem__inner emotion-euiKeyPadMenuItem__inner"
  >
    <span
      class="euiKeyPadMenuItem__icon emotion-euiKeyPadMenuItem__icon"
    >
      Icon
    </span>
    <span
      class="euiKeyPadMenuItem__label emotion-euiKeyPadMenuItem__label"
    >
      Label
    </span>
  </span>
</button>
`;

exports[`EuiKeyPadMenuItem props isDisabled renders with onClick 1`] = `
<button
  class="euiKeyPadMenuItem emotion-euiKeyPadMenuItem-disabled"
  disabled=""
  type="button"
>
  <span
    class="euiKeyPadMenuItem__inner emotion-euiKeyPadMenuItem__inner"
  >
    <span
      class="euiKeyPadMenuItem__icon emotion-euiKeyPadMenuItem__icon"
    >
      Icon
    </span>
    <span
      class="euiKeyPadMenuItem__label emotion-euiKeyPadMenuItem__label"
    >
      Label
    </span>
  </span>
</button>
`;

exports[`EuiKeyPadMenuItem props isSelected renders with href 1`] = `
<a
  aria-current="true"
  class="euiKeyPadMenuItem emotion-euiKeyPadMenuItem-enabled-selected"
  href="#"
  rel="noreferrer"
>
  <span
    class="euiKeyPadMenuItem__inner emotion-euiKeyPadMenuItem__inner"
  >
    <span
      class="euiKeyPadMenuItem__icon emotion-euiKeyPadMenuItem__icon"
    >
      Icon
    </span>
    <span
      class="euiKeyPadMenuItem__label emotion-euiKeyPadMenuItem__label"
    >
      Label
    </span>
  </span>
</a>
`;

exports[`EuiKeyPadMenuItem props isSelected renders with onClick 1`] = `
<button
  aria-pressed="true"
  class="euiKeyPadMenuItem emotion-euiKeyPadMenuItem-enabled-selected"
  type="button"
>
  <span
    class="euiKeyPadMenuItem__inner emotion-euiKeyPadMenuItem__inner"
  >
    <span
      class="euiKeyPadMenuItem__icon emotion-euiKeyPadMenuItem__icon"
    >
      Icon
    </span>
    <span
      class="euiKeyPadMenuItem__label emotion-euiKeyPadMenuItem__label"
    >
      Label
    </span>
  </span>
</button>
`;

exports[`EuiKeyPadMenuItem renders button 1`] = `
<button
  class="euiKeyPadMenuItem emotion-euiKeyPadMenuItem-enabled"
  type="button"
>
  <span
    class="euiKeyPadMenuItem__inner emotion-euiKeyPadMenuItem__inner"
  >
    <span
      class="euiKeyPadMenuItem__icon emotion-euiKeyPadMenuItem__icon"
    >
      Icon
    </span>
    <span
      class="euiKeyPadMenuItem__label emotion-euiKeyPadMenuItem__label"
    >
      Label
    </span>
  </span>
</button>
`;

exports[`EuiKeyPadMenuItem renders href 1`] = `
<a
  class="euiKeyPadMenuItem emotion-euiKeyPadMenuItem-enabled"
  href="#"
  rel="noreferrer"
>
  <span
    class="euiKeyPadMenuItem__inner emotion-euiKeyPadMenuItem__inner"
  >
    <span
      class="euiKeyPadMenuItem__icon emotion-euiKeyPadMenuItem__icon"
    >
      Icon
    </span>
    <span
      class="euiKeyPadMenuItem__label emotion-euiKeyPadMenuItem__label"
    >
      Label
    </span>
  </span>
</a>
`;

exports[`EuiKeyPadMenuItem renders href with rel 1`] = `
<a
  class="euiKeyPadMenuItem emotion-euiKeyPadMenuItem-enabled"
  href="#"
  rel="noreferrer"
>
  <span
    class="euiKeyPadMenuItem__inner emotion-euiKeyPadMenuItem__inner"
  >
    <span
      class="euiKeyPadMenuItem__icon emotion-euiKeyPadMenuItem__icon"
    >
      Icon
    </span>
    <span
      class="euiKeyPadMenuItem__label emotion-euiKeyPadMenuItem__label"
    >
      Label
    </span>
  </span>
</a>
`;
